# SDD-Rubik-Cube-3D-solver

./: .gitignore  README.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .dockerignore  .env.example  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
backend/database/: schema.sql
backend/src/api/: main.py
backend/src/api/routes/: __init__.py  cube.py  health.py  scramble.py
backend/src/database/: __init__.py  models.py  repository.py
backend/src/models/: __init__.py  cube_state.py  move.py  scramble.py
backend/src/services/: __init__.py  scramble_service.py  validation_service.py
backend/tests/contract/: test_cube_api.py  test_scramble_api.py
backend/tests/integration/: test_scramble_flow.py  test_scramble_reliability.py
backend/tests/performance/: test_scramble_perf.py
backend/tests/unit/: test_scramble_service.py
frontend/: .dockerignore  .env.example  .eslintignore  .gitignore  next.config.js  package.json  vitest.config.ts
frontend/src/app/: page.tsx
frontend/src/components/: ErrorBoundary.tsx  icons.tsx
frontend/src/services/: api.ts
frontend/src/store/: cubeStore.ts
frontend/tests/e2e/: camera.spec.ts  manual-rotation.spec.ts  (+1 more)
infra/docker/: Dockerfile.api  Dockerfile.web  docker-compose.local.yml
slm-service/: .env.example  .gitignore  requirements.txt
specs/001-cube-solver-3d/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tech-spec.md
(+22 files in other folders)
